2005-03-14 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/private.h:  Removed unused class templates
	unary_function_base and unary_function_wrapper.

2005-03-14 Braden McDaniel  <braden@endoframe.com>

	Use boost::bind instead of openvrml_::compose2.

	* src/libopenvrml/private.h:  Removed
	openvrml_::binary_compose and openvrml_::compose2.
	* src/libopenvrml/openvrml/browser.cpp:  Use boost::bind instead
	of openvrml_::compose2.
	* src/libopenvrml/openvrml/node.cpp:  Use boost::bind instead of
	openvrml_::compose2.

2005-03-14 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml-player/player.cpp:
	bounded_buffer<>'s mutex needs to be mutable for
	bounded_buffer<>::buffered.

2005-03-14 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml-player/player.cpp:  Moved
	plugin_istream to initial_stream_reader::operator() as a locally
	defined class.

2005-03-08 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp:  Lock the browser when
	initializing the root scene.

2005-03-07 Braden McDaniel  <braden@endoframe.com>

	Load the initial and inline worlds asynchronously.

	These changes add a new abstract class
	openvrml::resource_istream and a pure virtual function to
	openvrml::browser--openvrml::browser::do_get_resource--making
	openvrml::browser an abstract class as well.  Users of
	libopenvrml are now responsible for inheriting both these
	classes and implementing the required functionality.

	* mozilla-plugin/src/openvrml.cpp:  Implemented communication
	from the plug-in process back to the Web browser process for the
	purpose of requesting new streams.
	* mozilla-plugin/src/openvrml-player/player.cpp:  Implemented
	openvrml::browser.
	* src/libopenvrml/openvrml/ScriptJDK.cpp:  Updates for modified
	openvrml::scene.
	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g:  Modified to use
	thread-safe openvrml::browser::node_class_map.